--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,121 @@
-*{
+* {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+
+.text-primary {
+    color: red;
+}
+
+.btn-primary {
+
+    height: 64px;
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    padding: 18px 35px;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 20px;
+
+}
+
+header {
+    background: #FFF8F3;
+    background-image: url("../images/header_bg.png"), url(../images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+
 /* header and navigation styles */
-nav-title{
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 200px 50px 200px;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+    margin-left: 50px;
+}
+
+nav-title {
     font-weight: 800;
     font-size: 45px;
+
 }
-.text-primary{
-    color: orange;
+
+/* banner style */
+.banner {
+    display: flex;
+    margin: 0 200px;
+    align-items: center;
+}
+
+.banner-title {
+    font-weight: 700;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+
+.banner-sub-title {
+    font-weight: 600;
+    font-size: 45px;
+}
+
+.banner-desciption {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 35px;
+}
+
+/* main section */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+    /* display: flex; */
+    /* justify-content: center; */
+}
+
+/* About section style */
+.about {
+    margin-top: 130px;
+    background: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+
+}
+
+.section-title {
+    
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.section-desciption {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+.about-info-containr{
+    display: flex;
+    justify-content: space-around;
+
+}
+.info-title{
+    font-size: 20px;
+    color: #757575;
+}
+.info-description{
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
+
 }
