--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ nav-title {
     font-weight: 700;
     font-size: 85px;
     margin-bottom: 20px;
-    box-shadow: -16px;
+
 }
 
 .banner-sub-title {
@@ -83,9 +83,13 @@ main {
     /* justify-content: center; */
 }
 
+section {
+    margin-top: 130px;
+
+}
 /* About section style */
 .about {
-    margin-top: 130px;
+    
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -94,10 +98,11 @@ main {
 }
 
 .section-title {
-    
-    margin-bottom: 30px;
+
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
 }
 
 .section-desciption {
@@ -105,32 +110,52 @@ main {
     font-size: 18px;
     margin-bottom: 30px;
 }
-.about-info-containr{
+
+.about-info-containr {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
 
 }
-.info-title{
+
+.info-title {
     font-size: 20px;
     color: #757575;
 }
-.info-description{
+
+.info-description {
     color: #474747;
     font-size: 20px;
     font-weight: 700;
 
 }
+
 /* What i do style */
-.what-i-do{
-    margin-top: 130px;
-}
-.skills-container{
+
+
+.skills-container {
     display: flex;
+    gap: 23px;
+    text-align: center;
 }
-.skill-title{
+
+.skills {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
 
 }
-.skill-description{
-    
-}
+
+/* Resume Style */
