--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ header {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 0 200px 200px 200px;
+    padding: 50px 200px;
 }
 
 nav ul {
